# omniverse_rs

./: Cargo.toml  Dockerfile  README.md  deny.toml
.devcontainer/: devcontainer.json
.docker/: join.bash  run.bash
.github/workflows/: rust.yml
omniverse/: Cargo.toml
omniverse/src/: lib.rs
omniverse/src/utils/: error.rs  mod.rs  requirements.rs  result.rs  version.rs
omniverse_sys/: Cargo.toml  build.rs
omniverse_sys/include/cuda/include/: cuda_runtime_api.h
omniverse_sys/include/omni/physx/: placeholder.h
omniverse_sys/include/omniverse_sys/: omni.h
omniverse_sys/patches/include/omni/usd/: UsdContext.h.patch  UsdManager.h.patch  UsdUtils.h.patch
omniverse_sys/src/: lib.rs
omniverse_sys/src/ffi/: bindings.rs  mod.rs
omniverse_sys/src/ffi/carb/: mod.rs  plugin_loading_desc.rs  settings.rs
omniverse_sys/src/ffi/omni/: mod.rs
omniverse_sys/src/ffi/omni/kit/: app.rs  mod.rs  viewport.rs
omniverse_sys/src/ffi/omni/physx/: simulation.rs
omniverse_sys/src/ffi/omni/usdrt/: mod.rs
omniverse_sys/src/impls/: mod.rs
omniverse_sys/src/impls/carb/: framework.rs  mod.rs  plugin_loading_desc.rs
omniverse_sys/src/impls/omni/kit/: app_desc.rs  mod.rs
omniverse_sys/src/macros/: mod.rs
omniverse_sys/src/utils/: error.rs  mod.rs  path.rs  result.rs  string.rs  version.rs
